<resources>
    <string name="app_name">ToolPool</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="click_to_login">Click to Login</string>
    <string name="logout">Logout</string>
    <string name="not_a_member_register_now">Not a member? Register Now</string>
    <string name="login_photo">login_photo</string>
    <string name="app_logo">app logo</string>
    <string name="add_listing">add_listing</string>
    <string name="userprofile">User Profile</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="map">Map</string>
    <string name="settings">Settings</string>
    <array name="distance_spinner_items">
        <item>5 km</item>
        <item>10 km</item>
        <item>25 km</item>
        <item>50 km</item>
        <item>100 km</item>
    </array>
    <array name="category_spinner_items">
        <item></item>
        // empty option for no category selection
        <item>Power Tool</item>
        <item>Hand Tool</item>
        <item>Cutting Tool</item>
        <item>Vehicle</item>
        <item>Other</item>
    </array>

    <array name="condition_spinner_items">
        <item></item> <!-- empty option for no category selection -->
        <item>New</item>
        <item>Very Good</item>
        <item>Good</item>
        <item>Used</item>
        <item>Slight Damage</item>
    </array>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="listing_image_desc">listing_image_desc</string>
    <string name="photo_preview">photo_preview</string>
    <string name="user_name">User Name</string>
</resources>